--- a/index.html
+++ b/index.html
@@ -3,25 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Personal Budget</title>
-    <link rel="stylesheet" href="/reset.css">
-    <link rel="stylesheet" href="/main.css">
+
+    <!-- This is a Semantic HTML Change: Changed the link relationship to indicate it's a stylesheet -->
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./main.css">
+
+    <!-- This is an SEO Change -->
+    <meta name="description" content="Simplify budget management with our free app. Track expenses, stay on budget, and achieve financial success effortlessly.">
+    <!-- This is an SEO Change -->
+    <meta name="keywords" content="spending, financial strategy, financial control, personal finance, budget tracking, ">
+    <!-- This is an SEO Change -->
+    <meta name="author" content="Arpita M Kalburgi">    
 </head>
 <body>
 
-    <div class="menu">
+    <!-- This is a Semantic HTML Change -->   
+    <nav class="menu" role="navigation">
         <ul>
-            <li><a href="/">Homepage</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/login.html">Login</a></li>
-            <li><a href="https://google.com">Google</a></li>
+            <!-- This is an A11y Change -->
+            <li><a href="/" aria-label="Go to Homepage">Homepage</a></li>
+            <!-- This is an A11y Change -->
+            <li><a href="./about.html" aria-label="Learn About Our App">About</a></li>
+            <!-- This is an A11y Change -->
+            <li><a href="./login.html" aria-label="Log into Your Account">Login</a></li>
+            <!-- This is an A11y Change -->
+            <li><a href="https://google.com" aria-label="Visit Google">Google</a></li>
         </ul>
-    </div>
+    </nav>
+    
 
-    <div class="hero">
+    <!-- This is a Semantic HTML Change -->
+    <header class="hero">
         <h1>Personal Budget</h1>
         <h2>A personal-budget management app</h2>
-    </div>
+    </header>
 
     <div class="container center">
 
@@ -95,11 +112,12 @@
 
     </div>
 
-    <div class="bottom">
-        <div class="center">
-            All rights reserved &copy; Fabio Nolasco
-        </div>
-    </div>
+    <!-- This is a Semantic HTML Change -->
+    <footer class="bottom">
+        <p class="center">
+            All rights reserved &copy; Arpita M Kalburgi
+        </p>
+    </footer>
 
 </body>
 </html>
