--- a/public/index.html
+++ b/public/index.html
@@ -126,10 +126,16 @@
             {
                 data: [],
                 backgroundColor: [
-                   '#ffcd56',
-                   '#ff6384',
-                   '#36a2eb',
-                   '#fd6b19',
+                '#ffcd56',
+                '#ff6384',
+                '#36a2eb',
+                '#fd6b19',
+                '#4bc0c0', 
+                '#9966ff', 
+                '#ff99cc',   
+                '#669966',   
+                '#ff6633'   
+
                 ],
             }
         ],
@@ -148,9 +154,9 @@
         axios.get('/budget')
         .then(function (res) {
             console.log(res);
-            for ( var i = 0; i < res.data.Mybudget.length; i++ ) {
-                dataSource.datasets[0].data[i] = res.data.Mybudget[i].budget;
-                dataSource.labels[i] = res.data.Mybudget[i].title;
+            for ( var i = 0; i < res.data.length; i++ ) {
+                dataSource.datasets[0].data[i] = res.data[i].budget;
+                dataSource.labels[i] = res.data[i].title;
             }
             createChart();
         });
